--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 header {
     display: flex;
     background-color: #1F2937;
@@ -18,6 +9,11 @@ header {
     font-size: 18px;
     height: 65px;
     line-height: 65px;
+}
+
+body {
+    margin: 0px;
+    height: 100vh;
 }
 
 footer {
@@ -51,6 +47,7 @@ button {
 .main-flex {
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 header div {
@@ -175,13 +172,14 @@ header div {
 
 .imgsubtext {
     font-size: 18px;
-    color: #464d58;
+    font-weight: 200;
+    color: #101016;
 }
 
 .quote {
     font-style: italic;
     font-size: 36px;
-    font-weight: 100;
+    font-weight: 200;
 }
 
 .author {
